--- a/Tests/UnityGameLib.Test.asmdef
+++ b/Tests/UnityGameLib.Test.asmdef
@@ -2,12 +2,11 @@
     "name": "UnityGameLib.Test",
     "rootNamespace": "UnityGameLib",
     "references": [
-        "GUID:a89898a1a76eb464e85318268b36ed9e",
-        "GUID:27619889b8ba8c24980f49ee34dbb44a"
+        "GUID:a89898a1a76eb464e85318268b36ed9e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": true,
+    "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
