--- a/Example/UnityGameLib.Example.asmdef
+++ b/Example/UnityGameLib.Example.asmdef
@@ -5,7 +5,8 @@
         "GUID:a89898a1a76eb464e85318268b36ed9e",
         "GUID:49bd400204c87864783de7ace1191822",
         "GUID:21d1eb854b91ade49bc69a263d12bee2",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
